--- a/product-detail.html
+++ b/product-detail.html
@@ -25,7 +25,7 @@
     <!-- Header -->
     <header id="header" class="header"></header>
     <script>
-      load("#header", "./templates/header-logined.html ");
+      load("#header", "./templates/header.html ");
     </script>
     <!-- main -->
     <main class="product-page">
