--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,9 +28,9 @@
       load("#header", "./templates/header.html ");
     </script>
     <!-- main -->
-    <main class="product-page">
+    <main class="cart-page">
       <div class="container">
-        <div class="product-container">
+        <div class="cart-container">
           <!-- Search bar -->
           <div class="search-bar d-none d-md-flex">
             <input type="text" name="" id="" class="search-bar__input" placeholder="Search for item" />
@@ -41,33 +41,248 @@
         </div>
 
         <!-- Breadcrumb -->
-        <div class="product-container">
-          <ul class="breadcrumbs">
+        <div class="cart-container">
+          <ul class="breadcrumbs cart-page__breadcrumbs">
             <li>
               <a href="#!" class="breadcrumbs__link">
-                Departments
+                Home
                 <img src="./assets/img/icons/arrow-right.svg" alt="" />
               </a>
             </li>
             <li>
-              <a href="#!" class="breadcrumbs__link">
-                Coffee
-                <img src="./assets/img/icons/arrow-right.svg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="#!" class="breadcrumbs__link">
-                Coffee Beans
-                <img src="./assets/img/icons/arrow-right.svg" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="#!" class="breadcrumbs__link breadcrumbs__link--current"> LavAzza </a>
+              <a href="#!" class="breadcrumbs__link breadcrumbs__link--current"> Cart </a>
             </li>
           </ul>
         </div>
+
+        <!-- Cart content -->
+        <div class="cart-container">
+          <div class="row gy-xl-3">
+            <div class="col-8 col-xl-12">
+              <div class="cart-info">
+                <div class="cart-info__list">
+                  <!-- Cart Item 1 -->
+                  <article class="cart-item">
+                    <img src="./assets/img/product/product-1.png" alt="" class="cart-item__thumb" />
+                    <!-- cart content -->
+                    <div class="cart-item__content">
+                      <div class="cart-item__content-left">
+                        <h3 class="cart-item__title">
+                          <a href="./product-detail.html">Coffee Beans - Espresso Arabica and Robusta Beans</a>
+                        </h3>
+
+                        <p class="cart-item__price-wrap">$47.00 | <span class="cart-item__status">In strock</span></p>
+
+                        <div class="cart-item__ctrl cart-item__ctrl--md-block">
+                          <div class="cart-item__input">
+                            LavAzza
+                            <img src="./assets/img/icons/arrow-down-2.svg" class="icon" alt="" />
+                          </div>
+
+                          <div class="cart-item__input">
+                            <button class="cart-item__input-btn">
+                              <img src="./assets/img/icons/minus.svg" class="icon" alt="" />
+                            </button>
+                            <span>1</span>
+                            <button class="cart-item__input-btn">
+                              <img src="./assets/img/icons/plus.svg" class="icon" alt="" />
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="cart-item__content-right">
+                        <p class="cart-item__total-price">$47.00</p>
+
+                        <div class="cart-item__ctrl">
+                          <button class="cart-item__ctrl-btn">
+                            <img src="./assets/img/icons/heart-2.svg" alt="" />
+                            Save
+                          </button>
+
+                          <button class="cart-item__ctrl-btn js-toggle" toggle-target="#delete-confirm">
+                            <img src="./assets/img/icons/delete.svg" alt="" />
+                            Delete
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                  <!-- Cart Item 2 -->
+                  <article class="cart-item">
+                    <img src="./assets/img/product/product-2.png" alt="" class="cart-item__thumb" />
+                    <!-- cart content -->
+                    <div class="cart-item__content">
+                      <div class="cart-item__content-left">
+                        <h3 class="cart-item__title">
+                          <a href="./product-detail.html">Coffee Beans - Espresso Arabica and Robusta Beans</a>
+                        </h3>
+
+                        <p class="cart-item__price-wrap">$47.00 | <span class="cart-item__status">In strock</span></p>
+
+                        <div class="cart-item__ctrl cart-item__ctrl--md-block">
+                          <div class="cart-item__input">
+                            LavAzza
+                            <img src="./assets/img/icons/arrow-down-2.svg" class="icon" alt="" />
+                          </div>
+
+                          <div class="cart-item__input">
+                            <button class="cart-item__input-btn">
+                              <img src="./assets/img/icons/minus.svg" class="icon" alt="" />
+                            </button>
+                            <span>1</span>
+                            <button class="cart-item__input-btn">
+                              <img src="./assets/img/icons/plus.svg" class="icon" alt="" />
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="cart-item__content-right">
+                        <p class="cart-item__total-price">$47.00</p>
+
+                        <div class="cart-item__ctrl">
+                          <button class="cart-item__ctrl-btn">
+                            <img src="./assets/img/icons/heart-2.svg" alt="" />
+                            Save
+                          </button>
+
+                          <button class="cart-item__ctrl-btn js-toggle" toggle-target="#delete-confirm">
+                            <img src="./assets/img/icons/delete.svg" alt="" />
+                            Delete
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                  <!-- Cart Item 3 -->
+                  <article class="cart-item">
+                    <img src="./assets/img/product/product-3.png" alt="" class="cart-item__thumb" />
+                    <!-- cart content -->
+                    <div class="cart-item__content">
+                      <div class="cart-item__content-left">
+                        <h3 class="cart-item__title">
+                          <a href="./product-detail.html">Coffee Beans - Espresso Arabica and Robusta Beans</a>
+                        </h3>
+
+                        <p class="cart-item__price-wrap">$47.00 | <span class="cart-item__status">In strock</span></p>
+
+                        <div class="cart-item__ctrl cart-item__ctrl--md-block">
+                          <div class="cart-item__input">
+                            LavAzza
+                            <img src="./assets/img/icons/arrow-down-2.svg" class="icon" alt="" />
+                          </div>
+
+                          <div class="cart-item__input">
+                            <button class="cart-item__input-btn">
+                              <img src="./assets/img/icons/minus.svg" class="icon" alt="" />
+                            </button>
+                            <span>1</span>
+                            <button class="cart-item__input-btn">
+                              <img src="./assets/img/icons/plus.svg" class="icon" alt="" />
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="cart-item__content-right">
+                        <p class="cart-item__total-price">$47.00</p>
+
+                        <div class="cart-item__ctrl">
+                          <button class="cart-item__ctrl-btn">
+                            <img src="./assets/img/icons/heart-2.svg" alt="" />
+                            Save
+                          </button>
+
+                          <button class="cart-item__ctrl-btn js-toggle" toggle-target="#delete-confirm">
+                            <img src="./assets/img/icons/delete.svg" alt="" />
+                            Delete
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="cart-info__bottom d-md-none">
+                  <div class="row">
+                    <div class="col-8 col-xxl-7">
+                      <div class="cart-info__continue">
+                        <a href="./" class="cart-info__continue-link">
+                          <img src="./assets/img/icons/arrow-down-2.svg" class="cart-info__continue-icon icon" alt="" />
+                          Continue Shopping
+                        </a>
+                      </div>
+                    </div>
+                    <div class="col-4 col-xxl-5">
+                      <div class="cart-info__row">
+                        <span>SubTotal</span>
+                        <span>$191.65</span>
+                      </div>
+                      <div class="cart-info__row">
+                        <span>Shipping</span>
+                        <span>$10.00</span>
+                      </div>
+                      <div class="cart-info__separate"></div>
+                      <div class="cart-info__row cart-info__row--bold">
+                        <span>Total</span>
+                        <span>$200.65</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 col-xl-12">
+              <div class="cart-info">
+                <div class="cart-info__row">
+                  <span>Subtotal (items)</span>
+                  <span>3</span>
+                </div>
+                <div class="cart-info__row">
+                  <span>Price (Total)</span>
+                  <span>$191.65</span>
+                </div>
+                <div class="cart-info__row">
+                  <span>Shipping</span>
+                  <span>$10.00</span>
+                </div>
+                <div class="cart-info__separate"></div>
+                <div class="cart-info__row">
+                  <span>Estimated Total</span>
+                  <span>$201.65</span>
+                </div>
+                <a href="#!" class="btn btn--primary btn--rounded cart-info__checkout-btn">Continue to checkout</a>
+              </div>
+              <div class="cart-info">
+                <div class="gift-item">
+                  <div class="gift-item__icon-wrap">
+                    <img src="./assets/img/icons/gift.svg" alt="" class="gift-item__icon" />
+                  </div>
+                  <div class="gift-item__content">
+                    <h3 class="gift-item__title">Send this order as a gift.</h3>
+                    <p class="gift-item__desc">Available items will be shipped to your gift recipient.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
+
+    <!-- Dialog/modal -->
+    <div class="dialog hide" id="delete-confirm">
+      <div class="dialog__content">
+        <p class="dialog__text">
+          Lorem ipsum dolor, sit amet optio ut aut nam consequatur eos, asperiores sit laudantium.
+        </p>
+        <div class="dialog__bottom">
+          <button class="btn btn--text dialog__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
+          <button class="btn btn--primary btn--small dialog__btn">Delete</button>
+        </div>
+      </div>
+      <div class="dialog__overlay js-toggle" toggle-target="#delete-confirm"></div>
+    </div>
     <!-- Footer -->
     <footer id="footer" class="footer"></footer>
     <script>
