--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cart | Grocery Mart</title>
+    <title>Checkout | Grocery Mart</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
@@ -50,7 +50,7 @@
               </a>
             </li>
             <li>
-              <a href="#!" class="breadcrumbs__link breadcrumbs__link--current"> Cart </a>
+              <a href="#!" class="breadcrumbs__link breadcrumbs__link--current"> CheckOut </a>
             </li>
           </ul>
         </div>
@@ -60,6 +60,86 @@
           <div class="row gy-xl-3">
             <div class="col-8 col-xl-12">
               <div class="cart-info">
+                <h1 class="cart-info__heading">1. Shipping, arrives between Mon, May 16—Tue, May 24</h1>
+                <div class="cart-info__separate"></div>
+                <!-- Checkout Address -->
+                <div class="user-address">
+                  <div class="user-address__top">
+                    <div>
+                      <h2 class="user-address__title">Shipping address</h2>
+                      <p class="user-address__desc">Where should we deliver your order?</p>
+                    </div>
+                    <button
+                      class="user-address__btn btn btn--primary btn--rounded js-toggle"
+                      toggle-target="#add-new-address"
+                    >
+                      <img src="./assets/img/icons/plus.svg" alt="" />
+                      Add a new address
+                    </button>
+                  </div>
+                  <div class="user-address__list">
+                    <!-- Empty message -->
+                    <!-- <p class="user-address__massage">
+                      Not address yet. <a href="#!" class="user-address__link js-toggle" toggle-target="#add-new-address">Add a new address</a>
+                    </p> -->
+                    <!-- address-card 1 -->
+                    <article class="address-card">
+                      <div class="address-card__left">
+                        <div class="address-card__choose">
+                          <lable class="address-card__checkbox">
+                            <input type="checkbox" name="" id="" checked class="address-card__checkbox-input" />
+                          </lable>
+                        </div>
+                        <div class="address-card__info">
+                          <h3 class="address-card__title">Imran Khan</h3>
+                          <p class="address-card__desc">Museum of Rajas, Sylhet Sadar, Sylhet 3100.</p>
+                          <ul class="address-card__list">
+                            <li class="address-card__list-item">Shipping</li>
+                            <li class="address-card__list-item">Delivery from store</li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="address-card__right">
+                        <div class="address-card__crtl">
+                          <button class="address-card__crtl-btn">
+                            <img src="./assets/img/icons/edit.svg" class="icon" alt="" />
+                            Edit
+                          </button>
+                        </div>
+                      </div>
+                    </article>
+                    <!-- address-card 2 -->
+                    <article class="address-card">
+                      <div class="address-card__left">
+                        <div class="address-card__choose">
+                          <lable class="address-card__checkbox">
+                            <input type="checkbox" name="" id="" class="address-card__checkbox-input" />
+                          </lable>
+                        </div>
+                        <div class="address-card__info">
+                          <h3 class="address-card__title">Imran Khan</h3>
+                          <p class="address-card__desc">
+                            Al Hamra City (10th Floor), Hazrat Shahjalal Road, Sylhet, Sylhet, Bangladesh
+                          </p>
+                          <ul class="address-card__list">
+                            <li class="address-card__list-item">Shipping</li>
+                            <li class="address-card__list-item">Delivery from store</li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="address-card__right">
+                        <div class="address-card__crtl">
+                          <button class="address-card__crtl-btn">
+                            <img src="./assets/img/icons/edit.svg" class="icon" alt="" />
+                            Edit
+                          </button>
+                        </div>
+                      </div>
+                    </article>
+                  </div>
+                </div>
+                <div class="cart-info__separate"></div>
+                <h2 class="cart-info__sub-heading">Item details</h2>
                 <div class="cart-info__list">
                   <!-- Cart Item 1 -->
                   <article class="cart-item">
@@ -251,9 +331,7 @@
                   <span>Estimated Total</span>
                   <span>$201.65</span>
                 </div>
-                <a href="./checkout.html" class="btn btn--primary btn--rounded cart-info__checkout-btn">
-                  Continue to checkout
-                </a>
+                <a href="#!" class="btn btn--primary btn--rounded cart-info__checkout-btn">Continue to checkout</a>
               </div>
               <div class="cart-info">
                 <div class="gift-item">
@@ -272,19 +350,95 @@
       </div>
     </main>
 
-    <!-- Dialog/modal -->
-    <div class="dialog hide" id="delete-confirm">
-      <div class="dialog__content">
-        <p class="dialog__text">
+    <!-- modal :confirm reomove shopping cart item -->
+    <div class="modal modal--small hide" id="delete-confirm">
+      <div class="modal__content">
+        <p class="modal__text">
           Lorem ipsum dolor, sit amet optio ut aut nam consequatur eos, asperiores sit laudantium.
         </p>
-        <div class="dialog__bottom">
-          <button class="btn btn--text dialog__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
-          <button class="btn btn--primary btn--small dialog__btn">Delete</button>
+        <div class="modal__bottom">
+          <button class="btn btn--text modal__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
+          <button class="btn btn--primary btn--small modal__btn">Delete</button>
         </div>
       </div>
-      <div class="dialog__overlay js-toggle" toggle-target="#delete-confirm"></div>
+      <div class="modal__overlay js-toggle" toggle-target="#delete-confirm"></div>
     </div>
+
+    <!-- modal :address new shopping address -->
+    <div class="modal show" id="add-new-address">
+      <div class="modal__content">
+        <div class="modal__body">
+          <h2 class="modal__heading">Add new shopping address</h2>
+          <form class="form">
+            <div class="form__row">
+              <div class="form__group">
+                <label for="name" class="form__lable form__lable--small">Name</label>
+                <div class="form__text-input form__text-input--small">
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    placeholder="Name"
+                    minlength="2"
+                    class="form__input"
+                    required
+                  />
+                  <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+                </div>
+                <p class="form__error">Name must be at least characters</p>
+              </div>
+              <div class="form__group">
+                <label for="phone" class="form__lable form__lable--small">Phone</label>
+                <div class="form__text-input form__text-input--small">
+                  <input
+                    type="tel"
+                    name="phone"
+                    id="phone"
+                    placeholder="Phone"
+                    minlength="2"
+                    class="form__input"
+                    required
+                  />
+                  <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+                </div>
+                <p class="form__error">Phone must be at least characters</p>
+              </div>
+            </div>
+            <div class="form__group">
+              <label for="email" class="form__lable form__lable--small">Email</label>
+              <div class="form__text-input form__text-input--small">
+                <input
+                  type="Email"
+                  name="email"
+                  id="email"
+                  placeholder="Email"
+                  minlength="7"
+                  class="form__input"
+                  required
+                />
+                <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+              </div>
+              <p class="form__error">Name must be at least characters</p>
+            </div>
+
+            <div class="form__group">
+              <label for="address" class="form__lable form__lable--small">Address</label>
+              <div class="form__text-input form__text-input--small">
+                <input type="texy" name="address" id="address" placeholder="address" class="form__input" required />
+                <img src="./assets/img/icons/error.svg" width="18px" class="form__input-icon-error" alt="" />
+              </div>
+              <p class="form__error">Name must be at least characters</p>
+            </div>
+          </form>
+        </div>
+        <div class="modal__bottom">
+          <button class="btn btn--text modal__btn js-toggle" toggle-target="#add-new-address">Cancel</button>
+          <button class="btn btn--primary btn--small modal__btn">Delete</button>
+        </div>
+      </div>
+      <div class="modal__overlay"></div>
+    </div>
+
     <!-- Footer -->
     <footer id="footer" class="footer"></footer>
     <script>
