--- a/new-password.html
+++ b/new-password.html
@@ -14,7 +14,13 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Style -->
     <link rel="stylesheet" href="./assets/css/main.css" />
 
